avcodec/h264_parser: heuristically detect non marked keyframes

Fixes Ticket3083

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>